--- a/configfull_1114.yaml
+++ b/configfull_1114.yaml
@@ -8,7 +8,7 @@ proxy-providers:
       url: https://www.gstatic.com/generate_204
       interval: 300
     proxy: 🟢 直连
-    url: "机场订阅"
+    url: "https://toolpfan.xyz/link/rKhLv9i3ZKXdzYDi?trojan=1"
       
 # 用于下载订阅时指定UA
 global-ua: clash
